Home page Structure + Styling

--- a/index.html
+++ b/index.html
@@ -28,5 +28,75 @@
         </li>
       </ul>
     </nav>
+    <main>
+      <header class="container">
+        <img
+          src="./assets/hero-gif.gif"
+          alt="working-illustration"
+          class="hero-gif"
+        />
+        <div class="hero-text">
+          <div class="hero-head">Hello, World!</div><div> I am Megha Pathak.<br>
+            I'm a Product-minded Developer, Open Source Contributor passionate about envisioning and developing great products. 
+        </div>
+      </header>
+      <section class="section-dark">
+        <h1>About</h1>
+        <p>
+         I look at myself at the epicenter of business, technology, and UI/UX. I am passionate for building great products. My compentence with Front-end development, strategic product mindset and entrepreneurial acumen enables me to achieve the vision I have for my career. Along with motivating me to push my limits.
+   
+        </p>
+      </section>
+      <section>
+        <h1>Projects</h1>
+        <p>
+          I love creating stuff, hosting it online and share it with people. Check out my project here 👇(Maybe you find something there useful for yourself.) 
+        </p>
+        <a href="/pages/projects.html" class="button"> View here </a>
+      </section>
+      <section class="section-dark">
+        <h1>blogs</h1>
+        <p>
+          I keep documenting my journey as a developer. Check my blogs here👇
+        </p>
+        <a href="/pages/blogs.html" class="button"> Read here </a>
+      </section>
+      <section>
+        <a name="contactme"></a>
+        <h1 id="#contactme">Contact Me</h1>
+        <div class="contact-section">
+          <div class="contact-info">
+            <p>
+              When you have came this far, feel free to shoot me an email to
+              discuss any idea, project or just for a good chat! I love baking
+              stories over insightful discussions and coffee.
+            </p>
+            <div>
+              <a href="mailto:meghapathak2013@gmail.com"></a>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <ul>
+        <li>Find me here:</li>
+        <li>
+          <a href="https://www.github.com/megha-pathak" target="_blank">
+            <i class="fa fa-github"></i>
+          </a>
+        </li>
+        <li>
+          <a href="https://www.twitter.com/Megha_Pathak_" target="_blank">
+            <i class="fa fa-twitter"></i>
+          </a>
+        </li>
+        <li>
+          <a href="https://linkedin.com/in/megha--pathak" target="_blank">
+            <i class="fa fa-linkedin"></i>
+          </a>
+        </li>
+      </ul>
+    </footer>
   </body>
 </html>
