Refactor: Hero Section + Contact section

--- a/index.html
+++ b/index.html
@@ -21,9 +21,6 @@
           <a href="/pages/blogs.html"> Blogs </a>
         </li>
         <li>
-          <a href="/pages/talks.html"> Talks </a>
-        </li>
-        <li>
           <a href="/pages/contact.html"> Contact </a>
         </li>
       </ul>
@@ -36,25 +33,34 @@
           class="hero-gif"
         />
         <div class="hero-text">
-          <div class="hero-head">Hello, World!</div><div> I am Megha Pathak.<br>
-            I'm a Product-minded Developer, Open Source Contributor passionate about envisioning and developing great products. 
+          <p>
+            <strong class="theme">Hello, World! </strong
+            ><strong class="white"> I am Megha Pathak.</strong> <br />I'm a
+            Product-minded Developer, Open Source Contributor passionate about
+            envisioning and developing great products.
+          </p>
         </div>
       </header>
-      <section class="section-dark">
+      <section class="section-secondary">
         <h1>About</h1>
         <p>
-         I look at myself at the epicenter of business, technology, and UI/UX. I am passionate for building great products. My compentence with Front-end development, strategic product mindset and entrepreneurial acumen enables me to achieve the vision I have for my career. Along with motivating me to push my limits.
-   
+          I look at myself at the epicenter of business, technology, and UI/UX.
+          I am passionate for building great products. My compentence with
+          Front-end development, strategic product mindset and entrepreneurial
+          acumen enables me to achieve the vision I have for my career. Along
+          with motivating me to push my limits.
         </p>
       </section>
       <section>
         <h1>Projects</h1>
         <p>
-          I love creating stuff, hosting it online and share it with people. Check out my project here 👇(Maybe you find something there useful for yourself.) 
+          I love creating stuff, hosting it online and share it with people.
+          Check out my project here 👇(Maybe you find something there useful for
+          yourself.)
         </p>
         <a href="/pages/projects.html" class="button"> View here </a>
       </section>
-      <section class="section-dark">
+      <section class="section-secondary">
         <h1>blogs</h1>
         <p>
           I keep documenting my journey as a developer. Check my blogs here👇
@@ -72,7 +78,9 @@
               stories over insightful discussions and coffee.
             </p>
             <div>
-              <a href="mailto:meghapathak2013@gmail.com"></a>
+              <a href="mailto:meghapathak2013@gmail.com" class="button"
+                >Email Me</a
+              >
             </div>
           </div>
         </div>
