Feat: Added Projects

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Megha Pathak | Projects</title>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./../style.css" />
   </head>
 
   <body>
@@ -29,6 +29,64 @@
         <h1>
            My Projects  
         </h1>
+        <img src="./../assets/projects-gif.gif"
+        alt="projects-illustration"
+        class="projects-gif">
+        <section class="section-secondary">
+                    <h2>
+                        Sitcom CLI Quiz
+                    </h2>
+                    <p>
+                        A CLI app that tests you by asking questions from three famous Sitcoms - The Big Bang Theory, Friends, and Silicon Valley. Let's check your fandom for these shows. 
+                    </p>
+                    <div class="project">
+                        <a href="https://github.com/Megha-Pathak/Neog_CLI_Two" class="button" target="_blank">
+                            Source Code
+                        </a>
+                        <a href="https://repl.it/@MeghaPathak1/Sitcom-Quiz?embed=1&output=1#index.js" class="button" target="_blank">
+                            Hosted Link
+                        </a>
+                    </div>
+        </section>
+        <section>
+            <h2>
+                Do you know Me? CLI Quiz
+            </h2>
+            <p>
+                A CLI app that tests you by asking questions about me. Check it out if you think you know me. 😉
+            </p>
+            <div class="project">
+                <a href="https://github.com/Megha-Pathak/NeoG-CLI-One" class="button" target="_blank">
+                    Source Code
+                </a>
+                <a href="https://repl.it/@MeghaPathak1/Do-you-know-me-Quiz?embed=1&output=1#index.js" class="button" target="_blank">
+                    Hosted Link
+                </a>
+            </div>
+</section>
+       
+      
+    </main>
+        <footer>
+            <ul>
+              <li>Find me here:</li>
+              <li>
+                <a href="https://www.github.com/megha-pathak" target="_blank">
+                  <i class="fa fa-github"></i>
+                </a>
+              </li>
+              <li>
+                <a href="https://www.twitter.com/Megha_Pathak_" target="_blank">
+                  <i class="fa fa-twitter"></i>
+                </a>
+              </li>
+              <li>
+                <a href="https://linkedin.com/in/megha--pathak" target="_blank">
+                  <i class="fa fa-linkedin"></i>
+                </a>
+              </li>
+            </ul>
+          </footer>
   
   </body>
 </html>
