--- a/pages/blogs.html
+++ b/pages/blogs.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Megha Pathak | Blogs</title>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./../style.css" />
   </head>
 
   <body>
@@ -29,6 +29,25 @@
         <h1>
            My Blogs
         </h1>
-  
+        <footer>
+            <ul>
+              <li>Find me here:</li>
+              <li>
+                <a href="https://www.github.com/megha-pathak" target="_blank">
+                  <i class="fa fa-github"></i>
+                </a>
+              </li>
+              <li>
+                <a href="https://www.twitter.com/Megha_Pathak_" target="_blank">
+                  <i class="fa fa-twitter"></i>
+                </a>
+              </li>
+              <li>
+                <a href="https://linkedin.com/in/megha--pathak" target="_blank">
+                  <i class="fa fa-linkedin"></i>
+                </a>
+              </li>
+            </ul>
+          </footer>
   </body>
 </html>
