Feat Added Blogs

--- a/pages/blogs.html
+++ b/pages/blogs.html
@@ -26,28 +26,112 @@
       </ul>
     </nav>
     <div class="title">
-        <h1>
-           My Blogs
-        </h1>
-        <footer>
-            <ul>
-              <li>Find me here:</li>
-              <li>
-                <a href="https://www.github.com/megha-pathak" target="_blank">
-                  <i class="fa fa-github"></i>
-                </a>
-              </li>
-              <li>
-                <a href="https://www.twitter.com/Megha_Pathak_" target="_blank">
-                  <i class="fa fa-twitter"></i>
-                </a>
-              </li>
-              <li>
-                <a href="https://linkedin.com/in/megha--pathak" target="_blank">
-                  <i class="fa fa-linkedin"></i>
-                </a>
-              </li>
-            </ul>
-          </footer>
+      <h1>My Blogs</h1>
+      <img
+        src="./../assets/blog-gif.gif"
+        alt="projects-illustration"
+        class="projects-gif"
+      />
+    </div>
+    <section class="section-secondary">
+      <h2>
+        Why Product thinking is essential for Developers and how to apply it?
+      </h2>
+      <p>
+        In this blog I have described the difference between Project thinking
+        and Product thinking. Along, with the structure of Product thinking that
+        developers can adept while working on software. The blog got featured in
+        - Weekly Webtips publication.
+      </p>
+      <div class="project">
+        <a
+          href="https://medium.com/weekly-webtips/why-product-thinking-is-essential-for-developers-and-how-to-apply-it-e474f62b430"
+          class="button"
+          target="_blank"
+        >
+          Read here
+        </a>
+      </div>
+    </section>
+    <section>
+      <h2>5 Easy steps to create your own Chrome Extension</h2>
+      <p>
+        In this blog I made people understand concepts of Vanilla JavaScipt
+        while helping them in creating a Chrome extension of their own in 5 easy
+        steps. The blog got featured in - Better Programming publication.
+      </p>
+      <div class="project">
+        <a
+          href="https://medium.com/better-programming/5-easy-steps-to-create-your-own-chrome-extension-6e248e42d48d"
+          class="button"
+          target="_blank"
+        >
+          Read here
+        </a>
+      </div>
+    </section>
+    <section class="section-secondary">
+      <h2>
+        Learn concepts of Vanilla JavaScript while building a Privacy Card Game
+        in 5 easy Steps.
+      </h2>
+      <p>
+        Investing time in Vanilla JavaScript will pay off in the long run. So
+        keeping this significance of Vanilla JS in mind, I wrote a tutorial to
+        make people understand JavaScript concepts along with creating an
+        interesting game.
+      </p>
+      <div class="project">
+        <a
+          href="https://learnwithmegha.hashnode.dev/learn-concepts-of-vanilla-javascript-while-building-a-privacy-card-game-in-5-easy-steps-ckdefco1n0277xvs189bs9cke"
+          class="button"
+          target="_blank"
+        >
+          Read here
+        </a>
+      </div>
+    </section>
+    <section>
+      <h2>
+        Career Insights into Product Management ft. — Sarosh Mohammad [Senior PM
+        @Microsoft]
+      </h2>
+      <p>
+        I see myself as a Product Minded developer, so keeping up with my
+        interest, I wrote a blog post on - Career Insights into Product
+        Management, based on my learning by listening to Sarosh Mohammad [Senior
+        PM @ Microsoft]. I am grateful that this article got featured in
+        Medium’s largest publication The Startup.
+      </p>
+      <div class="project">
+        <a
+          href="https://medium.com/swlh/career-insights-into-product-management-ft-sarosh-mohammad-senior-pm-microsoft-77e0bd233fd4"
+          class="button"
+          target="_blank"
+        >
+          Read here
+        </a>
+      </div>
+    </section>
+    <footer>
+      <ul>
+        <li>Find me here:</li>
+        <li>
+          <a href="https://www.github.com/megha-pathak" target="_blank">
+            <i class="fa fa-github"></i>
+          </a>
+        </li>
+        <li>
+          <a href="https://www.twitter.com/Megha_Pathak_" target="_blank">
+            <i class="fa fa-twitter"></i>
+          </a>
+        </li>
+        <li>
+          <a href="https://linkedin.com/in/megha--pathak" target="_blank">
+            <i class="fa fa-linkedin"></i>
+          </a>
+        </li>
+      </ul>
+    </footer>
   </body>
 </html>
