--- a/pages/projects.html
+++ b/pages/projects.html
@@ -31,7 +31,7 @@
         </h1>
         <img src="./../assets/projects-gif.gif"
         alt="projects-illustration"
-        class="projects-gif">
+        class="projects-gif"></div>
         <section class="section-secondary">
                     <h2>
                         Sitcom CLI Quiz
