--- a/pages/blogs.html
+++ b/pages/blogs.html
@@ -21,7 +21,7 @@
           <a href="/pages/blogs.html"> Blogs </a>
         </li>
         <li>
-          <a href="/pages/contact.html"> Contact </a>
+          <a href="/index.html#contactme"> Contact </a>
         </li>
       </ul>
     </nav>
