--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <a href="/pages/projects.html" class="button"> View here </a>
       </section>
       <section class="section-secondary">
-        <h1>blogs</h1>
+        <h1>Blogs</h1>
         <p>
           I keep documenting my journey as a developer. Check my blogs here👇
         </p>
