Replaced gif with the Open Source Illustrations

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <main>
       <header class="container">
         <img
-          src="./assets/hero-gif.gif"
+          src="./assets/hero.svg"
           alt="working-illustration"
           class="hero-gif"
         />
