--- a/pages/blogs.html
+++ b/pages/blogs.html
@@ -28,7 +28,7 @@
     <div class="title">
       <h1>My Blogs</h1>
       <img
-        src="./../assets/blog-gif.gif"
+        src="./../assets/blog.svg"
         alt="projects-illustration"
         class="projects-gif"
       />
