--- a/pages/projects.html
+++ b/pages/projects.html
@@ -29,7 +29,7 @@
         <h1>
            My Projects  
         </h1>
-        <img src="./../assets/projects-gif.gif"
+        <img src="./../assets/projects.svg"
         alt="projects-illustration"
         class="projects-gif"></div>
         <section class="section-secondary">
