Added talks section

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -21,6 +21,9 @@
           <a href="/pages/blogs.html"> Blogs </a>
         </li>
         <li>
+          <a href="/pages/talks.html"> Talks </a>
+        </li>
+        <li>
           <a href="/index.html#contactme"> Contact </a>
         </li>
       </ul>
@@ -31,7 +34,7 @@
         </h1>
         <img src="./../assets/projects.svg"
         alt="projects-illustration"
-        class="projects-gif"></div>
+        class="illustration"></div>
         <section class="section-secondary">
                     <h2>
                         Sitcom CLI Quiz
