--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
           <a href="/pages/blogs.html"> Blogs </a>
         </li>
         <li>
+          <a href="/pages/talks.html"> Talks </a>
+        </li>
+        <li>
           <a href="/index.html#contactme"> Contact </a>
         </li>
       </ul>
