--- a/pages/blogs.html
+++ b/pages/blogs.html
@@ -21,6 +21,9 @@
           <a href="/pages/blogs.html"> Blogs </a>
         </li>
         <li>
+          <a href="/pages/talks.html"> Talks </a>
+        </li>
+        <li>
           <a href="/index.html#contactme"> Contact </a>
         </li>
       </ul>
@@ -30,7 +33,7 @@
       <img
         src="./../assets/blog.svg"
         alt="projects-illustration"
-        class="projects-gif"
+        class="illustration"
       />
     </div>
     <section class="section-secondary">
