--- a/pages/projects.html
+++ b/pages/projects.html
@@ -36,6 +36,68 @@
         alt="projects-illustration"
         class="illustration"></div>
         <section class="section-secondary">
+          <h2>
+              Learn JS with Me!
+          </h2>
+          <p>
+Frameworks will come and go, but Vanilla JS is forever. Use this JavaScript concepts recommendation app to find and study important JS concepts and become a JS ninja.           </p>
+          <div class="project">
+              <a href="https://github.com/Megha-Pathak/Learn-JS-with-Me/" class="button" target="_blank">
+                  Source Code
+              </a>
+              <a href="https://learn-js-with-me.netlify.app/" class="button" target="_blank">
+                  Hosted Link
+              </a>
+          </div>
+</section>
+<section>
+  <h2>
+      What's this Emoji for?
+  </h2>
+  <p>
+      Is understanding emojies a trouble for you? Use this React app to understand - What's this Emoji for?
+  </p>
+  <div class="project">
+      <a href="https://github.com/Megha-Pathak/whats-this-emoji" class="button" target="_blank">
+          Source Code
+      </a>
+      <a href="https://whats-this-emoji-for.netlify.app/" class="button" target="_blank">
+          Hosted Link
+      </a>
+  </div>
+</section>        <section class="section-secondary">
+  <h2>
+      Groot Talk
+  </h2>
+  <p>
+    Are you a fan of Groot? Use the translator to convert your text from English to
+    Groot language.  </p>
+  <div class="project">
+      <a href="https://github.com/Megha-Pathak/groot-translate" class="button" target="_blank">
+          Source Code
+      </a>
+      <a href="https://groot-talks.netlify.app/" class="button" target="_blank">
+          Hosted Link
+      </a>
+  </div>
+</section>
+<section>
+<h2>
+Banana Talk
+</h2>
+<p>
+  Are you a fan of minions? Did you know that the gibberish they say is an
+  actual language. Use the translator to convert your text from English to Banana language.</p>
+<div class="project">
+<a href="https://github.com/Megha-Pathak/minion-translate" class="button" target="_blank">
+  Source Code
+</a>
+<a href="https://megha-talks-minion.netlify.app/" class="button" target="_blank">
+  Hosted Link
+</a>
+</div>
+</section>
+        <section class="section-secondary">
                     <h2>
                         Sitcom CLI Quiz
                     </h2>
